--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- Principal conteneur -->
 		<div class="page-container">	
 			<!-- bloc-0 -->
-			<div class="bloc bgc-white l-bloc " id="bloc-0">
+			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
@@ -46,170 +46,170 @@
 						</div>
 					</nav>
 				</div>
-			</div>
+			</header>
 			<!-- bloc-0 END -->
+			<main>
+				<!-- bloc-1-presentation -->
+				<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+					<div class="container bloc-lg">
+						<div class="row tight-width-whitespace">
+							<div class="col-sm-12">
+								<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'Agence La Panthère" />
+								<h1 class="text-center hero-bloc-text tc-white">Agence La Panthère</h1>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- bloc-1-presentation END -->
 
-			<!-- bloc-1-presentation -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace">
-						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'Agence La Panthère" />
-							<h1 class="text-center hero-bloc-text tc-white">Agence La Panthère</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-1-presentation END -->
-
-			<!-- bloc-2-services -->
-			<div class="bloc bgc-white l-bloc" id="bloc-2-services">
-				<div class="container bloc-md">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<p class="explanation">Nous sommes une agence de web design qui aide <br>les entreprises situé sur Lyon à devenir attractives et visibles sur Internet.</p>
-						</div>
-					</div>
-					<div class="row voffset-lg med-width-whitespace">
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Web Design"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Web design
-							</h3>
-							<p class="text-center">
-								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Stratégie"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Stratégie
-							</h3>
-							<p class="text-center">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin d'améliorer aux mieux votre design et votre référencement naturel.
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Illustrations"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Illustrations
-							</h3>
-							<p class="text-center">
-								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-							</p>
-						</div>
-					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<div class="citation">
-								<p class="citation-content">"L'Agence La Panthère est une excellente agence web ! 
-									Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. 
-									Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
-								<p class="citation-source">Maxime Guibard, PDG de À vos fourchettes</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-2-services END -->
-
-			<!-- bloc-3-what-i-do -->
-			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace black-background">
-						<div class="col-sm-12">
-							<h2 class="mg-md text-center tc-white">
-								Notre travail ? Aider les entreprises Lyonnaise à se développer, à attirer de nouveaux clients et à connaître le succès qu'elles mérites.<br>
-							</h2>
-							<p class="text-center white">
-								Collaborer avec des entrepreneurs créatifs et des entreprises locale est notre passion, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau, bien structurés et qui seront facilement trouvable sur les moteurs de recherche.
-							</p>
+				<!-- bloc-2-services -->
+				<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+					<div class="container bloc-md">
+						<div class="row">
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+								<p class="explanation">Nous sommes une agence de web design qui aide <br>les entreprises situé sur Lyon à devenir attractives et visibles sur Internet.</p>
+							</div>
+						</div>
+						<div class="row voffset-lg med-width-whitespace">
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Web Design"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									Web design
+								</h3>
+								<p class="text-center">
+									Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								</p>
+							</div>
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Stratégie"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									Stratégie
+								</h3>
+								<p class="text-center">
+									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin d'améliorer aux mieux votre design et votre référencement naturel.
+								</p>
+							</div>
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Illustrations"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									Illustrations
+								</h3>
+								<p class="text-center">
+									Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+								</p>
+							</div>
+						</div>
+						<div class="row voffset-lg voffset">
+							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+								<div class="citation">
+									<blockquote class="citation-content">"L'Agence La Panthère est une excellente agence web ! 
+										Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. 
+										Cela nous a aidé à doubler nos ventes en ligne à Lyon."</blockquote>
+									<p class="citation-source">Maxime Guibard, PDG de À vos fourchettes</p>
+									</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<!-- bloc-3-what-i-do END -->
+				</section>
+				<!-- bloc-2-services END -->
 
-			<!-- bloc-4-portfolio -->
-			<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<p class="explanation">Nous travaillons avec beaucoup de clients, voici quelques <br>exemples de design que nous avons réalisé pour eux :</p>
+				<!-- bloc-3-what-i-do -->
+				<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+					<div class="container bloc-lg">
+						<div class="row tight-width-whitespace black-background">
+							<div class="col-sm-12">
+								<h2 class="mg-md text-center tc-white">
+									Notre travail ? Aider les entreprises Lyonnaise à se développer, à attirer de nouveaux clients et à connaître le succès qu'elles mérites.<br>
+								</h2>
+								<p class="text-center white">
+									Collaborer avec des entrepreneurs créatifs et des entreprises locale est notre passion, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau, bien structurés et qui seront facilement trouvable sur les moteurs de recherche.
+								</p>
+								<div class="col-sm-12 text-center">
+									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-							<h3 class="mg-md text-center">
-								Refonte d'un site pour un journal local
-							</h3>
-							<p class="text-center">
-								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-							</p>
-						</div>
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-							<h3 class="mg-md text-center">
-								Création d'un site pour photographes
-							</h3>
-							<p class="text-center">
-								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-							</p>
-						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-							<h3 class="mg-md text-center">
-								Réalisation d'un site pour un voyageur
-							</h3>
-							<p class="text-center">
-								Nous avons élaboré un site web et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-							</p>
-						</div>
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
-							<h3 class="mg-md text-center">
-								Conception d'un site pour une agence de mariage
-							</h3>
-							<p class="text-center">
-								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-4-portfolio END -->
+				</section>
+				<!-- bloc-3-what-i-do END -->
 
-			<!-- bloc-5-cta -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12">
-							<h2 class="mg-md text-center tc-white">
-								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-							</h2>
+				<!-- bloc-4-portfolio -->
+				<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+					<div class="container bloc-lg">
+						<div class="row">
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+								<p class="explanation">Nous travaillons avec beaucoup de clients, voici quelques <br>exemples de design que nous avons réalisé pour eux :</p>
+							</div>
+						</div>
+						<div class="row tight-width-whitespace portfolio-row">
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Exemple de design pour le site d'un journal local avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
+								<h3 class="mg-md text-center">
+									Refonte d'un site pour un journal local
+								</h3>
+								<p class="text-center">
+									Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+								</p>
+							</div>
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" alt="Exemple de design pour un site de photographes avec lesquels nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
+								<h3 class="mg-md text-center">
+									Création d'un site pour photographes
+								</h3>
+								<p class="text-center">
+									Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+								</p>
+							</div>
+						</div>
+						<div class="row tight-width-whitespace portfolio-row">
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" alt="Exemple de design pour le site d'un' voyageur avec lequel nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
+								<h3 class="mg-md text-center">
+									Réalisation d'un site pour un voyageur
+								</h3>
+								<p class="text-center">
+									Nous avons élaboré un site web et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+								</p>
+							</div>
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" alt="Exemple de design pour le site d'une agence de mariage avec laquelle nous avons travaillé" class="img-responsive portfolio-thumb" /></a>
+								<h3 class="mg-md text-center">
+									Conception d'un site pour une agence de mariage
+								</h3>
+								<p class="text-center">
+									Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+								</p>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<!-- bloc-5-cta END -->
+				</section>
+				<!-- bloc-4-portfolio END -->
 
+				<!-- bloc-5-cta -->
+				<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+					<div class="container bloc-lg">
+						<div class="row">
+							<div class="col-sm-12">
+								<h2 class="mg-md text-center tc-white">
+									Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+								</h2>
+								<div class="col-sm-12 text-center">
+									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- bloc-5-cta END -->
+			</main>
 			<!-- Footer - bloc-8 -->
-			<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
@@ -280,7 +280,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
