--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Bannière de l'Agence La Panthère" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-labelledby="Boutons de navigations">
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="Boutons de navigations">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
@@ -73,7 +73,7 @@
 						<div class="row voffset-lg med-width-whitespace">
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Web Design"></span>
+									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Web Design"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Web design
@@ -84,7 +84,7 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Stratégie"></span>
+									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Stratégie"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Stratégie
@@ -95,7 +95,7 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-labelledby="Icône du point Illustrations"></span>
+									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Illustrations"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Illustrations
@@ -118,7 +118,7 @@
 					</div>
 				</section>
 				<!-- bloc-2-services END -->
-				
+
 				<!-- bloc-3-what-i-do -->
 				<section class="bloc d-bloc bloc-bg-texture texture-paper b-parallax bg-presentation tc-white bgc-atomic-tangerine" id="bloc-3-what-i-do">
 					<div class="container bloc-lg">
@@ -219,22 +219,22 @@
 							<div class="row row-no-gutters socials">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
+										<a class="social" href="https://twitter.com/AgenceLaPanthere"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
+										<a class="social" href="https://facebook.com/AgenceLaPanthere"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
+										<a class="social" href="https://dribbble.com/AgenceLaPanthere"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
+										<a class="social" href="https://www.instagram.com/AgenceLaPanthere"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
 									</div>
 								</div>
 							</div>
