--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Bannière de l'Agence La Panthère" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-labelledby="Boutons de navigations">
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="Boutons de navigations">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
@@ -132,22 +132,22 @@
 							<div class="row row-no-gutters socials">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
+										<a class="social" href="https://twitter.com/AgenceLaPanthere"><span class="fa fa-twitter icon-md" title="Notre compte Twitter"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
+										<a class="social" href="https://facebook.com/AgenceLaPanthere"><span class="fa fa-facebook icon-md" title="Notre compte Facebook"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
+										<a class="social" href="https://dribbble.com/AgenceLaPanthere"><span class="fa fa-dribbble icon-md" title="Notre compte Dribble"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
+										<a class="social" href="https://www.instagram.com/AgenceLaPanthere"><span class="fa fa-instagram icon-md" title="Notre compte Instagram"></span></a>
 									</div>
 								</div>
 							</div>
