--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-		
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
 		<!-- Analytics -->
 		
 		<!-- Analytics END -->
@@ -73,7 +67,7 @@
 						<div class="row voffset-lg med-width-whitespace">
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Web Design"></span>
+									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Web design
@@ -84,7 +78,7 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Stratégie"></span>
+									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Stratégie
@@ -95,7 +89,7 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="text-center">
-									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône du point Illustrations"></span>
+									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h2 class="mg-md text-center">
 									Illustrations
@@ -256,5 +250,13 @@
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
+
+		<!-- Scripts -->
+		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jquery.touchSwipe.js" defer></script>
+		<script src="./js/gmaps.js"></script>
+		<!-- Scripts END -->
 	</body>
 </html>
