--- a/page2.html
+++ b/page2.html
@@ -11,12 +11,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-		
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
-		<script src="./js/formHandler.js"></script>
 		<!-- Analytics -->
 		
 		<!-- Analytics END -->
@@ -169,5 +163,12 @@
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
+		<!-- Scripts -->
+		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/formHandler.js"></script>
+		<!-- Scripts END -->
 	</body>
 </html>
