--- a/page2.html
+++ b/page2.html
@@ -120,8 +120,8 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
-								Agence La Panthère - Agence de webdesign basée à Lyon.
+							<p class="text-center white footer-desc">
+								Agence La Panthère - Agence de webdesign basée à Lyon
 							</p>
 							<div class="row row-no-gutters socials">
 								<div class="col-sm-3">
