--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									<a href="index.html">Accueil</a>
 								</li>
 								<li>
-									<a href="page2.html">Contact</a>
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -126,7 +126,7 @@
 								</p>
 							</div>
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
 							</div>
 						</div>
 					</div>
@@ -194,7 +194,7 @@
 									<strong>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</strong>
 								</p>
 								<div class="col-sm-12 text-center">
-									<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
+									<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Nous Contacter</a>
 								</div>
 							</div>
 						</div>
